--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,6 +25,11 @@
           </div>
         </div>
 
+        <!-- Autentimispaan -->
+        <div id='Autentimispaan' class='paan d-flex align-items-start'>
+          <p><a href="/auth">Logi sisse Github-ga</a></p>
+        </div>
+
       </div>
     </div>
   </div>
