--- a/views/pages/autenditud.ejs
+++ b/views/pages/autenditud.ejs
@@ -27,7 +27,7 @@
 
         <!-- Autentimispaan -->
         <div id='Autentimispaan' class='paan d-flex align-items-start'>
-          <p>Sisse logitud Githubi kasutajana.</p>
+          <p>Sisse logitud Githubi kasutajana: <%= kasutaja %>.</p>
           <p><a href="/logout">Logi välja</a></p>
         </div>
 
