Lisatud küpsiste töötlus

--- a/views/pages/autenditud.ejs
+++ b/views/pages/autenditud.ejs
@@ -26,16 +26,17 @@
         </div>
 
         <!-- Autentimispaan -->
-        <div id='Autentimispaan' class='paan d-flex align-items-start'>
+        <div id='Autentimispaan' class='paan'>
           <p>Sisse logitud Githubi kasutajana: <b><%= kasutaja %></b></p>
           <p><a href="/logout">Logi välja</a></p>
         </div>
 
       </div>
     </div>
-  </div>
 
-  <% include ../partials/jalus.ejs %>
+    <% include ../partials/jalus.ejs %>
+
+  </div>
 
 </body>
 </html>
