--- a/views/pages/autenditud.ejs
+++ b/views/pages/autenditud.ejs
@@ -31,6 +31,18 @@
           <p><a href="/logout">Logi välja</a></p>
         </div>
 
+        <!-- Tekstikoostepaan -->
+        <div id='Tekstikoostepaan' class='paan d-flex align-items-start'>
+          <form action="/salvesta" method="post">
+            <div id='STekstiblokk'>
+              <label class='active'>
+              Salvestatav tekst: <input id='SalvestatavTekst' name='salvestatavtekst' type='text' class='form-control' autocomplete='off'>
+              </label>
+            </div>
+            <input class="btn btn-lg btn-secondary btn-block" type="submit">
+          </form>
+        </div>
+
       </div>
     </div>
 
