--- a/views/pages/autenditud.ejs
+++ b/views/pages/autenditud.ejs
@@ -32,14 +32,14 @@
         </div>
 
         <!-- Tekstikoostepaan -->
-        <div id='Tekstikoostepaan' class='paan d-flex align-items-start'>
+        <div id='Tekstikoostepaan' class='paan d-flex align-items-start justify-items-center'>
           <form action="/salvesta" method="post">
             <div id='STekstiblokk'>
               <label class='active'>
               Salvestatav tekst: <input id='SalvestatavTekst' name='salvestatavtekst' type='text' class='form-control' autocomplete='off'>
               </label>
             </div>
-            <input class="btn btn-lg btn-secondary btn-block" type="submit">
+            <input class="btn btn-lg btn-secondary" type="submit">
           </form>
         </div>
 
