--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -53,7 +53,7 @@ Värviskeem
     color: #757575; }
 
   .ikoon { font-family: 'Material Icons';
-    font-size: 48px;
+    font-size: 48px; color: #757575;
   }
 
   /* Paanid - Ühised omadused
