--- a/views/pages/salvestatud.ejs
+++ b/views/pages/salvestatud.ejs
@@ -27,7 +27,7 @@
 
         <!-- Autentimispaan -->
         <div id='Autentimispaan' class='paan'>
-          <p>Sisse logitud Githubi kasutajana: <b><%= kasutaja %></b></p>
+          <p>Sisse logitud Githubi kasutajana: <b><%= vastus %></b></p>
           <p><a href="/logout">Logi välja</a></p>
         </div>
 
@@ -35,7 +35,7 @@
         <div id='Teatepaan' class='paan'>
           <p><%= vastus %></p>
         </div>
-        
+
       </div>
 
     </div>
