--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -105,6 +105,7 @@ Värviskeem
     color: #757575;
   }
   .disabled { color: Gainsboro !important; cursor: auto; }
+  .servataNupp { border: none; }
 
   /* Paanide spetsiifilised elemendid */
     
