--- a/views/pages/autenditud.ejs
+++ b/views/pages/autenditud.ejs
@@ -44,11 +44,9 @@
               <textarea class="form-control" id="SalvestatavTekst" name='salvestatavtekst' autocomplete='off' rows="3">
               </textarea>
             </div>
-            <p>
-              <span class="btn btn-secondary" type="submit">
+            <button class="btn btn-secondary servataNupp" type="submit">
                <i class="ikoon material-icons">cloud_upload</i>
-              </span>
-            </p>
+            </button>
           </form>
         </div>
       </div>
