--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,7 +27,7 @@
 
         <!-- Autentimispaan -->
         <div id='Autentimispaan' class='paan d-flex align-items-start'>
-          <p><a href="/auth">Logi sisse Github-ga</a></p>
+          <p><a href="/auth">Logi sisse GitHub-ga</a></p>
         </div>
 
       </div>
