--- a/css/Times.scss
+++ b/css/Times.scss
@@ -9,7 +9,7 @@ body {
   max-width: 50em; margin: 0 0; 
   padding: 0.6em 1.5em 2em 2em; 
   line-height: 1.2;
-  font-family: 'Times New Roman', serif; 
+  font-family: 'Courier News', monospace; 
   color: #333;
   font-size: 12pt; 
   }
