--- a/css/Times.scss
+++ b/css/Times.scss
@@ -34,10 +34,11 @@ h1 { font-size: 130%;
   line-height: 1.2;
   font-weight: bold;
   font-family: 'Roboto', sans-serif; 
-  margin-top: 1em; }
+  margin-top: 2rem;
+  margin-bottom: 1.5rem; }
 
 h2 { font-weight: bold; font-size: 100%; 
-  margin: 1em 0 1em 0; }    
+  margin: 2rem 0 1rem 0; }    
 
 h3 { font-size: 12pt; font-style: italic; font-weight: normal;
   line-height: 1.2; text-decoration: underline;
