--- a/css/Times.scss
+++ b/css/Times.scss
@@ -9,7 +9,7 @@ body {
   max-width: 50em; margin: 0 0; 
   padding: 1rem 1.5em 2em 2em; 
   line-height: 1.2;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+  font-family: 'Libre Baskerville', serif;
   color: #333;
   font-size: 12pt; 
   }
@@ -59,12 +59,7 @@ table { table-layout: fixed;
 table { border-collapse: collapse; }
 table, th, td { border: 1px solid black; }
 
-.ei, .jah { text-align: center; }
-.ei { color: White; background-color: #D1F3D1; } /* Doodle */
-.jah { background-color: #FFCCCA; } /* Doodle */
-
 /* Tekst */
-.disabled { color:#000000; opacity:0.38; }
 .s { font-size: 10pt; }
 
 /* TOC genereeritud */
@@ -85,9 +80,9 @@ blockquote {
 
 /* Kood; asciiflow joonised */
 pre, code, samp {
-  font-family: 'Anonymous Pro', monospace;
+  font-family: 'Cutive Mono', monospace;
   font-size: 16px; color: Gray;
-  background-color: antiquewhite;
+  background-color: honeydew;
   overflow-y: hidden; overflow-x: hidden;
   page-break-inside: avoid; hyphens: none;
   text-transform: none;
