--- a/css/Times.scss
+++ b/css/Times.scss
@@ -22,18 +22,12 @@ body {
   max-width: 53rem; /* Teksti loetavuse huvides */
 }
 
-#Tekst { max-width: 35rem; 
-}
-
-/* Statistikariba */
-.statistika { font-family: 'Roboto', sans-serif;
-  font-size: 13pt; margin-bottom: 8px; }
+#Tekst { max-width: 45rem; }
 
 /* Jaotisepealkiri */
-h1 { font-size: 130%;
+h1 { font-size: 140%;
   line-height: 1.2;
   font-weight: bold;
-  font-family: 'Roboto', sans-serif; 
   margin-top: 2rem;
   margin-bottom: 1.5rem; }
 
@@ -45,7 +39,7 @@ h3 { font-size: 12pt; font-style: italic; font-weight: normal;
   margin: 0.2em 0 0.2em 0; }   
 
 /* Tekstiparagrahv */
-p { margin: 0 0 1em 0; }
+p { margin: 0 0 1em 0; line-height: 1.5; }
 
 /* Loetelud */
 #Tekst ul { list-style: none; margin: 0 0 1em 0;
@@ -63,8 +57,13 @@ table, th, td { border: 1px solid black; }
 .s { font-size: 10pt; }
 
 /* TOC genereeritud */
+#markdown-toc ul { list-style: none; margin: 0 !important;
+    padding-left: 0 !important; }
+#markdown-toc ul > li:before { display: inline-block;
+    content: none !important; width: 0 !important; margin-left: 0 !important; }
 #markdown-toc > li {
   list-style: none;
+  margin-bottom: 0.8rem;
 }
 
 /* Allkriipsutus */
@@ -73,15 +72,15 @@ table, th, td { border: 1px solid black; }
 /* Plokktsitaat */
 blockquote { 
   font-style: italic; 
-  font-family: 'Anonymous Pro', monospace;
-  font-size: 16px;
+  font-family: 'Cutive Mono', monospace;
+  font-size: 13pt;
   margin-left: 0;
 }
 
 /* Kood; asciiflow joonised */
 pre, code, samp {
   font-family: 'Cutive Mono', monospace;
-  font-size: 16px; color: Gray;
+  font-size: 13pt; color: Gray;
   background-color: honeydew;
   overflow-y: hidden; overflow-x: hidden;
   page-break-inside: avoid; hyphens: none;
@@ -117,22 +116,11 @@ a[href]:active {
   border-color: #C00;
 }
 
-/* ======== Paneelid ======== */
-.action, .note, .teade { border-radius: 8px; padding: 10px; }
-
-/* Tegevus */
-.action { border: 1px solid $bluegrey100; 
-  background-color: $bluegrey100; 
-}
-/* Märkus */
-.note { border: 1px solid Aquamarine; background-color: Azure; }
-
 /* Joon */
 hr { color: gray; }
 
 /* Joonis */
 .joonis { color: gray;
   border-top: 1px solid gray;
-  font-family: 'Roboto';
   letter-spacing: 0.2pt;
   font-size: 8pt; }
