--- a/css/Times.scss
+++ b/css/Times.scss
@@ -96,24 +96,7 @@ pre { margin-top: 1em; margin-bottom: 1em; }
 a[href] {
   color: $mutedblue;
   text-decoration: none;
-  border-bottom: 1px solid $mutedblue;
-  padding: 0 1px 0;
-  margin: 0 -1px 0;
-}
-a:visited {
-  border-bottom-color: $mutedblue;
-}
-
-a[href]:focus,
-a[href]:hover {
-  background: $mutedblue;
-  background: rgba(75%, 75%, 75%, .25);
-  border-bottom-width: 3px;
-  margin-bottom: -2px;
-}
-a[href]:active {
-  color: #C00;
-  border-color: #C00;
+  border-bottom: 1px dotted $mutedblue;
 }
 
 /* Joon */
