--- a/css/Times.scss
+++ b/css/Times.scss
@@ -8,7 +8,7 @@ $bluegrey100: #CFD8DC;
 body {
   max-width: 50em; margin: 0 0; 
   padding: 1rem 1.5em 2em 2em; 
-  line-height: 1.2;
+  line-height: 1.5;
   font-family: 'Libre Baskerville', serif;
   color: #333;
   font-size: 12pt; 
@@ -39,7 +39,7 @@ h3 { font-size: 12pt; font-style: italic; font-weight: normal;
   margin: 0.2em 0 0.2em 0; }   
 
 /* Tekstiparagrahv */
-p { margin: 0 0 1em 0; line-height: 1.5; }
+p { margin: 0 0 1em 0; }
 
 /* Loetelud */
 #Tekst ul { list-style: none; margin: 0 0 1em 0;
