--- a/_layouts/Times.html
+++ b/_layouts/Times.html
@@ -36,9 +36,9 @@
   </div>
 
   <!-- Footer -->
-  <div style='margin: 4rem;'>
+  <div style='margin: 4rem 0; text-align: center;'>
     <a href='https://creativecommons.org/licenses/by-nc-sa/4.0/' data-toggle='tooltip' title='Litsents'>CC BY-NC-SA 4.0</a>
-    <a href='https://github.com/PriitParmakson'>Priit Parmakson</a> 2017 &nbsp;&nbsp;&nbsp;
+    <a href='https://github.com/PriitParmakson'>Priit Parmakson</a> 2017
   </div>
 </body>
 
