--- a/css/Times.scss
+++ b/css/Times.scss
@@ -15,14 +15,7 @@ body {
   }
 
 /* ---- Paigutus ---- */
-#Container { display: flex; max-width: 40em; }
-
-#Avatekst {
-  flex-grow: 1; margin-left: 2rem;
-  max-width: 53rem; /* Teksti loetavuse huvides */
-}
-
-#Tekst { max-width: 45rem; }
+#Container { display: flex; }
 
 /* Jaotisepealkiri */
 h1 { font-size: 140%;
