--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,9 +15,9 @@
           class='paan teabepaan d-flex align-items-start'>
           <!-- Info -->
           <p id='Infotekst'>
-            <b>Node.js-Heroku-OAuth-Github näiterakendus</b><br>
+            <b>TARA autentimisteenust kasutav näiterakendus</b><br>
             <br>
-            Samategev on <a href='https://www.heroku.com'>Herokus</a> majutatud <a href='https://nodejs.org'>Node.js</a> rakendus, mis demonstreerib <a href='https://oauth.net/2/'>OAuth 2.0</a> autentimist ja <a href='https://github.com/'>GitHubi</a> kasutamist rakenduse püsimäluna.
+            <a href='https://www.heroku.com'>Herokus</a> majutatud, <a href='https://nodejs.org'>Node.js</a> platvormil rakendus, mis demonstreerib kasutaja autentimist <a href='https://e-gov.github.io/TARA-Doku/'>TARA autentimisteenuse</a> abil.
           </p>
           <!-- Sulgemisnupp -->
           <div id='InfopaanSulge' class='justify-content-end sulgemisnupuke'>
@@ -27,7 +27,7 @@
 
         <!-- Autentimispaan -->
         <div id='Autentimispaan' class='paan d-flex align-items-start'>
-          <p><a href="/auth">Logi sisse GitHub-ga</a></p>
+          <p><a href="/auth">Logi sisse TARA teenusega</a></p>
         </div>
 
       </div>
