--- a/views/partials/jalus.ejs
+++ b/views/partials/jalus.ejs
@@ -3,8 +3,7 @@
     style='margin-top: 3rem; margin-bottom: 3rem;'>
   <div class='col-xs-12 col-sm-10 col-md-8 col-lg-8 col-xl-6'>
     <p>
-      <a href='https://creativecommons.org/licenses/by-nc-sa/4.0/' data-toggle='tooltip' title='Litsents'>CC BY-NC-SA 4.0</a> 
-      <a href='https://github.com/PriitParmakson'>Priit Parmakson</a> 2017
+      <a href='https://github.com/PriitParmakson'>ParmaksonResearch</a>,  2017</i>
       &nbsp;&nbsp;&nbsp;
       <a href='https://github.com/PriitParmakson/Samategev' data-toggle='tooltip' title='Lähtekood'>
         <svg class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="32" height="32" aria-hidden="true">
