--- a/views/partials/jalus.ejs
+++ b/views/partials/jalus.ejs
@@ -3,7 +3,7 @@
     style='margin-top: 3rem; margin-bottom: 3rem;'>
   <div class='col-xs-12 col-sm-10 col-md-8 col-lg-8 col-xl-6'>
     <p>
-      <a href='https://github.com/PriitParmakson'>ParmaksonResearch</a>,  2017</i>
+      <i><a href='https://github.com/PriitParmakson'>Parmakson Research OÜ</a>,  2017</i>
       &nbsp;&nbsp;&nbsp;
       <a href='https://github.com/PriitParmakson/Samategev' data-toggle='tooltip' title='Lähtekood'>
         <svg class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="32" height="32" aria-hidden="true">
